--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "private": true,
   "dependencies": {
+    "@mui/material": "^6.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "chart.js": "^4.4.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.0.4"
